--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,10 @@ requests>=2.31.0
 beautifulsoup4>=4.12.0
 praw>=7.7.0  # Reddit API
 snscrape>=0.7.0  # Twitter scraping (no API key needed)
-selenium>=4.15.0  # For JavaScript-heavy sites
-playwright>=1.40.0  # Alternative to Selenium
+
+# Selenium for JavaScript-rendered content (Rotten Tomatoes)
+selenium>=4.15.0
+webdriver-manager>=4.0.0  # Auto-manages ChromeDriver installation
 
 # NLP & ML
 transformers>=4.35.0
